ingress-letsencrypt-https/cluster-issuer/ingress-rule-with-cluster-issuer.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-svc-rule
  namespace: example
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - <actual domain>
    secretName: example-tls
  rules:
  - host: <actual domain>
    http:
      paths:
      - path: /
        backend:
          serviceName: example-svc
          servicePort: 80
